# FastMineSweeper-HTMX

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: game.py  main.py
app/services/: connections.py  minesweeper.py
static/css/: minesweeper_general.css
templates/: base.html  create_game.html  game.html  main.html  minesweeper_general.html  minesweeper_general_copy.html
