[tool.poetry]
name = "Minesweeper Project"
version = "0.1.0"
description = ""
authors = ["dkodsy <dkodsy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
ruff = "^0.3.3"
mypy = "^1.9.0"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
